[gd_scene load_steps=9 format=3 uid="uid://bgesw1qbsfcxh"]

[ext_resource type="Script" path="res://game.gd" id="1_orup3"]
[ext_resource type="PackedScene" uid="uid://bt83t8l85qlv0" path="res://Characters/Player/player.tscn" id="3_8fhmi"]
[ext_resource type="Script" path="res://Rooms/Rooms.gd" id="3_bo5y5"]
[ext_resource type="Script" path="res://UI.gd" id="4_etra8"]
[ext_resource type="Texture2D" uid="uid://qm3hqylli3h8" path="res://Assets/v1.1 dungeon crawler 16X16 pixel pack/ui (new)/health_ui.png" id="4_mby8g"]
[ext_resource type="Texture2D" uid="uid://2woqp1ev4vkw" path="res://Assets/MechaAssets/progress bar.png" id="5_gi4w3"]
[ext_resource type="Texture2D" uid="uid://dxmpbqq72626t" path="res://Assets/MechaAssets/Battery1.png" id="7_4hk3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewmje"]
bg_color = Color(0.372549, 0, 0.568627, 1)

[node name="Game" type="Node2D"]
position = Vector2(0, -8)
script = ExtResource("1_orup3")

[node name="Player" parent="." instance=ExtResource("3_8fhmi")]
z_index = 1
position = Vector2(253, 306)
hp = 600

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="Rooms" type="Node2D" parent="."]
script = ExtResource("3_bo5y5")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_etra8")

[node name="HealthBar" type="TextureProgressBar" parent="UI"]
offset_right = 80.0
offset_bottom = 16.0
stretch_margin_left = 10
texture_over = ExtResource("4_mby8g")
texture_progress = ExtResource("5_gi4w3")
tint_progress = Color(0.741176, 0, 0.160784, 1)

[node name="BatteryImage" type="TextureRect" parent="UI"]
modulate = Color(0.509804, 0.00392157, 0.882353, 1)
offset_left = 431.0
offset_top = -5.0
offset_right = 943.0
offset_bottom = 507.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_4hk3o")

[node name="battery" type="ProgressBar" parent="UI/BatteryImage"]
layout_mode = 0
offset_left = 60.0
offset_top = 120.0
offset_right = 410.0
offset_bottom = 390.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ewmje")
value = 100.0
show_percentage = false

[node name="BatteryTimer" type="Timer" parent="UI"]
autostart = true

[connection signal="hp_changed" from="Player" to="UI" method="_on_player_hp_changed"]
[connection signal="timeout" from="UI/BatteryTimer" to="UI" method="_on_battery_timer_timeout"]
